Fix: add spacing between contact  form and footer - added bottom margin to separate form submit button from footer.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ main {
 
 /*Ended page places style */
 
-
+/*Contact page style*/
 input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
@@ -317,6 +317,7 @@ input[type=submit] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-bottom: 16px;
 }
 
 input[type=submit]:hover {
